dfir_rs/tests/compile-fail/surface_syntax_indexing_empty.stderr
error: unexpected end of input, expected one of: square brackets, `mod`, identifier, parentheses
 --> tests/compile-fail/surface_syntax_indexing_empty.rs:5:35
  |
5 |         source_iter(0..10) -> [0]();
  |                                   ^
